test/deploy-test-environment.tf
provider "aws" {
    profile = "default"
    region  = "us-east-1"
}

data "aws_ami" "test-image" {
    most_recent = true
    owners = ["self"]
    filter {
      name   = "name"
      values = ["${var.project_name}-test-image"]
    }
}

resource "aws_security_group" "default" {
    name            = "test_${var.project_name}"
    
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }

    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }

      egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
      }
}

resource "aws_instance" "test-instance" {
    instance_type   = "t2.micro"
    ami             = data.aws_ami.test-image.id
    vpc_security_group_ids = ["${aws_security_group.default.id}"]
    tags = {
        Name = "${var.project_name}-test"
    }
}

output "instance_ip_addr" {
  value = aws_instance.test-instance.public_ip
}

resource "aws_key_pair" "prod-keys" {
  key_name = "nextcloud-keys"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCus5+64KBreEk9PC8EvsqsfXuhH6cPq5sgJOfWm+Sse3Ow4w+xagsBZSoJsjRL5PsMW2Jn9DnEsAHtPO7e+ZB3vSVh1ECWp9E+4UA2mHaNqYDjJ16r9T84aCAbhRNFNx0YX0gIDt3vRJsCuwgHIZYsp1E82h6jSAimA1cC/I4Y7izCS9m4w5Q2IZ0sictCpaT/t/UpDwwIxPws+ixlmOaVQPyDNRbqjRWEz7/yft6Ene6GGugPj/vVJ/eAtVQcMUlVsniCUCXCS3aA+Fwh89DKiwE88tnEiankBHR9+geYD64Dn2G87VCKNisvZFELMryRmIit+J+WnWf5dzHJAttCJfCWoEc5qm1N14ns2qvYsXM9zaeTx/UMk8W49+4ogMasgW5RaO9kWJBusO3fNm6L9kKs5nZV5MCQb2JpBgwNUWgNq17LIXEX/I3yn5ty [...]
}
